--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
+    "react-redux": "^9.2.0",
     "react-router": "^7.12.0",
     "sonner": "^2.0.7",
     "tailwindcss": "^4.1.18"
