--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router": "^7.12.0",
+    "redux-persist": "^6.0.0",
     "sonner": "^2.0.7",
     "tailwindcss": "^4.1.18"
   },
